<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/selector_layout_row_item"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/imageViewPhoto"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/mb"/>
    <TextView
        android:id="@+id/textViewName"
        android:layout_width="150dp"
        android:textSize="20dp"
        android:text="@string/namedemo"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/imageViewPhoto"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/textViewCreated"
        android:layout_width="100dp"
        android:textSize="17dp"
        android:text="@string/created"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/imageViewPhoto"
        app:layout_constraintTop_toBottomOf="@id/textViewName"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/textViewCreatedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:text="@string/createddemo"
        app:layout_constraintStart_toEndOf="@id/textViewCreated"
        app:layout_constraintTop_toBottomOf="@id/textViewName"/>
    <TextView
        android:id="@+id/textViewInPrice"
        android:layout_width="100dp"
        android:textSize="17dp"
        android:text="@string/inprice"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/imageViewPhoto"
        app:layout_constraintTop_toBottomOf="@id/textViewCreated"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/textViewInPriceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:text="@string/quantitydemo"
        app:layout_constraintStart_toEndOf="@id/textViewInPrice"
        app:layout_constraintTop_toBottomOf="@id/textViewCreatedValue"/>
    <TextView
        android:id="@+id/textViewOutPrice"
        android:layout_width="100dp"
        android:textSize="17dp"
        android:text="@string/outprice"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/imageViewPhoto"
        app:layout_constraintTop_toBottomOf="@id/textViewInPrice"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/textViewOutPriceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:text="@string/quantitydemo"
        app:layout_constraintStart_toEndOf="@id/textViewOutPrice"
        app:layout_constraintTop_toBottomOf="@id/textViewInPriceValue"/>

    <TextView
        android:id="@+id/textViewQuantity"
        android:layout_width="100dp"
        android:textSize="17dp"
        android:text="@string/quantity"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/imageViewPhoto"
        app:layout_constraintTop_toBottomOf="@id/textViewOutPrice"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/textViewQuantityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:text="@string/quantitydemo"
        app:layout_constraintStart_toEndOf="@id/textViewQuantity"
        app:layout_constraintTop_toBottomOf="@id/textViewOutPriceValue"/>
</androidx.constraintlayout.widget.ConstraintLayout>